Introduce many2many over multiple element columns