@@ -46,8 +46,8 @@ import eu.solven.adhoc.MapBasedTabularView;
 import eu.solven.adhoc.aggregations.IDecomposition;
 import eu.solven.adhoc.aggregations.IOperatorsFactory;
 import eu.solven.adhoc.aggregations.StandardOperatorsFactory;
-import eu.solven.adhoc.aggregations.many_to_many.IManyToManyDefinition;
-import eu.solven.adhoc.aggregations.many_to_many.ManyToManyDecomposition;
+import eu.solven.adhoc.aggregations.many_to_many.IManyToMany1DDefinition;
+import eu.solven.adhoc.aggregations.many_to_many.ManyToMany1DDecomposition;
 import eu.solven.adhoc.api.v1.pojo.value.EqualsMatcher;
 import eu.solven.adhoc.api.v1.pojo.value.IValueMatcher;
 import eu.solven.adhoc.dag.AdhocQueryEngine;
@@ -127,20 +127,21 @@ public class TestManyToManyAdhocQuery_Large_Exponential extends ADagTest impleme
 	// element=4 -> group=3|G
 	// element=5 -> group=3|G
 	// ...
-	IManyToManyDefinition manyToManyDefinition = ManyToManyDynamicDefinition.builder().elementToGroups(rawElement -> {
-		if (rawElement instanceof Integer element) {
-			if (element < 0) {
-				return Set.of();
-			} else if (element > maxElementCardinality) {
-				return Set.of();
-			}
-			return Collections.unmodifiableSet(
-					ContiguousSet.create(Range.closed(elementToSmallestGroup(element), maxElementCardinality),
-							DiscreteDomain.integers()));
-		} else {
-			return Set.of();
-		}
-	}).groupToElements(groupToElements).build();
+	IManyToMany1DDefinition manyToManyDefinition =
+			ManyToMany1DDynamicDefinition.builder().elementToGroups(rawElement -> {
+				if (rawElement instanceof Integer element) {
+					if (element < 0) {
+						return Set.of();
+					} else if (element > maxElementCardinality) {
+						return Set.of();
+					}
+					return Collections.unmodifiableSet(
+							ContiguousSet.create(Range.closed(elementToSmallestGroup(element), maxElementCardinality),
+									DiscreteDomain.integers()));
+				} else {
+					return Set.of();
+				}
+			}).groupToElements(groupToElements).build();
 
 	private Set<Integer> groupToElements(int group) {
 		if (group < 0) {
@@ -160,21 +161,22 @@ public class TestManyToManyAdhocQuery_Large_Exponential extends ADagTest impleme
 			.operatorsFactory(makeOperatorsFactory(manyToManyDefinition))
 			.build();
 
-	private @NonNull IOperatorsFactory makeOperatorsFactory(IManyToManyDefinition manyToManyDefinition) {
+	private @NonNull IOperatorsFactory makeOperatorsFactory(IManyToMany1DDefinition manyToManyDefinition) {
 
-        return new StandardOperatorsFactory() {
-            @Override
-            public IDecomposition makeDecomposition(String key, Map<String, ?> options) {
-                if (ManyToManyDecomposition.KEY.equals(key) || key.equals(ManyToManyDecomposition.class.getName())) {
-                    return new ManyToManyDecomposition(options, manyToManyDefinition);
-                }
-                return switch (key) {
-                    default:
-                        yield super.makeDecomposition(key, options);
-                };
-            }
-        };
-    }
+		return new StandardOperatorsFactory() {
+			@Override
+			public IDecomposition makeDecomposition(String key, Map<String, ?> options) {
+				if (ManyToMany1DDecomposition.KEY.equals(key)
+						|| key.equals(ManyToMany1DDecomposition.class.getName())) {
+					return new ManyToMany1DDecomposition(options, manyToManyDefinition);
+				}
+				return switch (key) {
+				default:
+					yield super.makeDecomposition(key, options);
+				};
+			}
+		};
+	}
 
 	final String dispatchedMeasure = "k1.dispatched";
 
@@ -203,14 +205,14 @@ public class TestManyToManyAdhocQuery_Large_Exponential extends ADagTest impleme
 
 	void prepareMeasures() {
 		Map<String, Object> options = ImmutableMap.<String, Object>builder()
-				.put(ManyToManyDecomposition.K_INPUT, cElement)
-				.put(ManyToManyDecomposition.K_OUTPUT, cGroup)
+				.put(ManyToMany1DDecomposition.K_INPUT, cElement)
+				.put(ManyToMany1DDecomposition.K_OUTPUT, cGroup)
 				.build();
 
 		amb.addMeasure(Dispatchor.builder()
 				.name(dispatchedMeasure)
 				.underlying("k1")
-				.decompositionKey(ManyToManyDecomposition.class.getName())
+				.decompositionKey(ManyToMany1DDecomposition.class.getName())
 				.decompositionOptions(options)
 				.build());
 
